Fix width of org cards on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@
 		color: inherit;
 		text-decoration: none;
 	}
+
+	@media (max-width: 416px) {
+		& {
+			grid-template: repeat(auto-fit, 100%) / repeat(auto-fit, 100%);
+		}
+	}
 }
 
 article p:first-letter {
